--- a/app/src/main/res/menu/menu_manage.xml
+++ b/app/src/main/res/menu/menu_manage.xml
@@ -3,7 +3,7 @@
       xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/manage_add"
-        android:icon="@drawable/ic_add"
+        android:icon="@drawable/ic_add_black"
         android:title="@string/add"
         android:visible="false"
         app:showAsAction="ifRoom"/>
