--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,68 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
+    <color name="teal_20">#e9faf9</color>
+    <color name="teal_50">#E0F2F1</color>
+    <color name="teal_100">#B2DFDB</color>
+    <color name="teal_200">#80CBC4</color>
+    <color name="teal_300">#4DB6AC</color>
+    <color name="teal_600">#00897B</color>
+    <color name="teal_700">#00796b</color>
+    <color name="teal_800">#00695C</color>
+
+    <color name="red_300">#E57373</color>
+    <color name="red_400">#EF5350</color>
+    <color name="red_500">#F44336</color>
+    <color name="red_700">#D32F2F</color>
+    <color name="red_800">#C62828</color>
+    <color name="red_900">#B71C1C</color>
+
+    <color name="yellow_100">#FFF9C4</color>
+    <color name="yellow_200">#FFF59D</color>
+    <color name="yellow_300">#FFF176</color>
+    <color name="yellow_400">#FFEE58</color>
+    <color name="yellow_500">#FFEB3B</color>
+    <color name="yellow_600">#FDD835</color>
+    <color name="yellow_700">#FBC02D</color>
+    <color name="yellow_800">#F9A825</color>
+
+    <!-- gray scale -->
+    <color name="black">#000000</color>
+    <color name="black_primary">#de000000</color>
+    <color name="black_secondary">#8a000000</color>
+    <color name="black_negative">#61000000</color>
+    <color name="black_a70">#46000000</color>
+    <color name="black_light">#20000000</color>
+    <color name="black_lighter">#14000000</color>
+
+    <color name="white">#ffffff</color>
+    <color name="white_primary">#dcffffff</color>
+    <color name="white_secondary">#b2ffffff</color>
+    <color name="white_negative">#7fffffff</color>
+    <color name="white_light">#50ffffff</color>
+    <color name="white_lighter">#0affffff</color>
+    <color name="white_lighter_edittext">#0fffffff</color>
+
+    <color name="gray">#e0e0e0</color>
+    <color name="gray_light">#f7f7f7</color>
+    <color name="gray_lighter">#fcfcfc</color>
+
+    <color name="transparent">#00FFFFFF</color>
+
+    <color name="color1">#d32f2f</color>
+    <color name="color2">#c2185b</color>
+    <color name="color3">#7b1fa2</color>
+    <color name="color4">#512da8</color>
+    <color name="color5">#303f9f</color>
+    <color name="color6">#1565c0</color>
+    <color name="color7">#0277bd</color>
+    <color name="color8">#00838f</color>
+    <color name="color10">@color/teal_700</color>
+    <color name="color11">#33691e</color>
+    <color name="color12">#827717</color>
+    <color name="color13">#3e2723</color>
+    <color name="color14">#263238</color>
+    <color name="color15">#212121</color>
+    <color name="color16">#000000</color>
+
 </resources>
